# aarhusarkivet

./: .dockerignore  .flake8  .gitignore  DEP_clientInterface.py  Dockerfile  Pipfile  README.md  api_client.py  api_openaws.py  api_openaws_error.py  app_log.py  application.py  auth.py  autocompleteInterface.py  autosuggestInterface.py  clientInterface.py  constants.py  db.py  decorators.py  docker-compose.yml  fastapi_client.py  openaws.py  pyproject.toml  requirements.txt  resourceInterface.py  searchInterface.py  serviceInterface.py  session.py  settings.py  views.py
.archive/: application_auth-part.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
static/css/: application.css  record-series.css
static/js/: application.js  record-series.js
static/root/: robots.txt
static/scss/: application.scss
templates/: _base.html  about.html  councilsites.html  imagesites.html  index.html  profile.html  resource.html  search.html  test.html
templates/auth/: _base.html  basic.html  forgot_password.html  login.html  logout_jwt.html  me.html  register.html  reset_password.html
templates/components/: actionbar_record.html  galleryitem_listview_v2.html  listitem_fullview.html  listitem_list.html  search_form_dates.html
templates/errorpages/: error.html
templates/fastapi/: _base.html  _test.html  basic.html  forgot_password.html  home.html  login.html  logout_jwt.html  me.html  register.html  reset_password.html
templates/resources/: collection.html  collection_series.html  location.html  record.html  record_extension--sejrssedler.html
(+10 files in other folders)
