[tool.poetry]
name = "aarhusarkivet"
version = "0.1.0"
description = ""
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
Flask = "^2.1.2"
boto3 = "^1.24.22"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
openaws-client = {git = "https://github.com/aarhusstadsarkiv/openaws-client.git", rev = "v0.6.1-2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
